# object-tracking

./: CMakeLists.txt  README.md  main.cpp
resources/outputs/: bboxes.csv  landmarks.csv
src/: person_detector.cpp  person_detector.hpp  pose_estimator.cpp  pose_estimator.hpp  utils.cpp  utils.hpp  video_processor.cpp  video_processor.hpp
